[tool.poetry]
name = "scli"
version = "0.1.0"
description = "simple cli tool"
authors = ["ozcan yarimdunya <ozcanyd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
mkdocs-material = "^8.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
